[gd_scene load_steps=7 format=3 uid="uid://bcquudai5ee4e"]

[ext_resource type="Script" path="res://platform_switch.gd" id="1_6505u"]
[ext_resource type="Texture2D" uid="uid://dc1cgxboutfrp" path="res://Circle.png" id="2_u3d7o"]
[ext_resource type="Texture2D" uid="uid://puh1cyscdg3a" path="res://icon.svg" id="3_bbaub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f1v1q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbk4s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dhnat"]
radius = 27.0

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_6505u")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite2D2" type="Sprite2D" parent="StaticBody2D"]
clip_children = 1
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("2_u3d7o")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D/Sprite2D2"]
texture = ExtResource("3_bbaub")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_f1v1q")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("3_bbaub")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("RectangleShape2D_pbk4s")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dhnat")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
